fixing missing supply interface